# dumbcoder

./: .gitignore  CHANGELOG.md  Cargo.toml  PROPOSAL.md
.dumbcoder/: config.toml
.dumbcoder/plugins/: security-audit.toml
docs/: architecture.en.md  architecture.zh.md  commands.en.md  commands.zh.md  development-plan.en.md  development-plan.zh.md  security.en.md  security.zh.md  tui.en.md  tui.zh.md
src/: audit.rs  config.rs  context.rs  git.rs  index.rs  main.rs  model.rs  plugin.rs  security.rs  session.rs  tool.rs  util.rs
src/cmd/: ask.rs  explain.rs  index.rs  init.rs  mod.rs  patch.rs  review.rs  run.rs  search.rs  test.rs  tui.rs
src/tui/: action.rs  app.rs  event.rs  markdown.rs  mod.rs  ui.rs
test/scripts/: evaluate.py  setup_project.py
