[package]
name = "dumbcoder"
version = "0.1.0"
edition = "2021"
description = "An intranet AI Coding Assistant CLI/TUI tool"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
colored = "2"
walkdir = "2"
regex = "1"
