[package]
name = "dumbcoder"
version = "0.1.0"
edition = "2021"
description = "An intranet AI Coding Assistant CLI/TUI tool"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
colored = "2"
walkdir = "2"
regex = "1"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
rusqlite = { version = "0.32", features = ["bundled"] }
